<resources>
    <string name="app_name">RunningApp</string>
    <!--    <string name="google_maps_api_key">Your Api Key Here</string>-->
    <string name="google_maps_api_key">AIzaSyDEGwjn_HvTElA-CMOMkYHnhO-tfOwZpwg</string>

    <!--    titles-->
    <string name="runnings">Runnings</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="tracking">Tracking</string>


    <!--    bottom sheet text-->
    <string name="total_distance">Total Distance</string>
    <string name="total_average_speed">Average Speed</string>
    <string name="total_time">Total Time</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="avg_speed_over_time">Avg Speed Over Time</string>

    <!--    run item-->
    <string name="miters">Meters</string>
    <string name="seconds">Seconds</string>
    <string name="speed">Speed</string>

    <!--    other-->
    <string name="sorted_by">Sorted by:</string>
    <string name="your_name">Your name</string>
    <string name="your_weight">Your weight</string>
    <string name="apply">Apply</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="timer_init">00:00:00</string>

    <!--    permissions-->
    <string name="permission_request">You need to accept location permission to use this app</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_running_app">Welcome to Running App</string>
    <string name="great_work">Great Work!</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="calories_burned">Calories Burned:</string>
</resources>